--- a/Hobee/src/main/webapp/resources/css/admin/adminFaqWrite.css
+++ b/Hobee/src/main/webapp/resources/css/admin/adminFaqWrite.css
@@ -155,3 +155,27 @@ label {
     color: white;
 }
 .btn-gray:hover { background: #4b5563; }
+
+.main-header h1 {
+    position: relative;
+    padding-bottom: 20px !important;
+}
+
+.main-header h1::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 50px;
+    height: 4px;
+    background: #3b82f6;
+    border-radius: 4px;
+}
+
+.btn-area button {
+    width: 120px !important;
+    height: 44px !important;
+    font-size: 15px !important;
+}
+
+
